--- a/sass/example.scss
+++ b/sass/example.scss
@@ -1,1 +1,14 @@
 @import "compass/reset";
+
+.col {
+  background: darken(white, 10%);
+  border: 1px solid darken(white, 15%);
+  min-height: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 30px;
+}
+
+.is-center-aligned {
+  text-align: center;
+}
